# rcpio

./: Cargo.toml  FORMAT.md  README.md
src/: defs.rs  lib.rs  main.rs  parse.rs
tests/: tests.rs
